@@ -1,7 +1,6 @@
 ## 
 # JsonRpc-Cpp build file.
 #
-
 # Configure compiler arguments
 cflags = ['-std=c++98', '-Wall', '-W', '-pedantic', '-Wredundant-decls', '-Wshadow', '-Werror', '-O2'];
 
@@ -26,17 +25,24 @@ lib_includes = ['src/jsonrpc.h', 'src/jsonrpc_handler.h', 'src/jsonrpc_server.h'
 libjsonrpc = env.SharedLibrary(target = lib_target, source = lib_sources, LIBS=['json']);
 
 # Build examples
-test_sources = ['test/test-rpc.cpp'];
-udpserver_sources = ['test/udp-server.cpp'];
-tcpserver_sources = ['test/tcp-server.cpp'];
-udpclient_sources = ['test/udp-client.cpp'];
-tcpclient_sources = ['test/tcp-client.cpp'];
+test_sources = ['examples/test-rpc.cpp'];
+udpserver_sources = ['examples/udp-server.cpp'];
+tcpserver_sources = ['examples/tcp-server.cpp'];
+udpclient_sources = ['examples/udp-client.cpp'];
+tcpclient_sources = ['examples/tcp-client.cpp'];
 
 test = env.Object(test_sources);
-tcpserver = env.Program(target = 'test/tcp-server', source = [tcpserver_sources, test], LIBS=['json', 'jsonrpc']);
-udpserver = env.Program(target = 'test/udp-server', source = [udpserver_sources, test], LIBS=['json', 'jsonrpc']);
-tcpclient = env.Program(target = 'test/tcp-client', source = [tcpclient_sources], LIBS=['json', 'jsonrpc']);
-udpclient = env.Program(target = 'test/udp-client', source = [udpclient_sources], LIBS=['json', 'jsonrpc']);
+tcpserver = env.Program(target = 'examples/tcp-server', source = [tcpserver_sources, test], LIBS=['json', 'jsonrpc']);
+udpserver = env.Program(target = 'examples/udp-server', source = [udpserver_sources, test], LIBS=['json', 'jsonrpc']);
+tcpclient = env.Program(target = 'examples/tcp-client', source = [tcpclient_sources], LIBS=['json', 'jsonrpc']);
+udpclient = env.Program(target = 'examples/udp-client', source = [udpclient_sources], LIBS=['json', 'jsonrpc']);
+
+# Build unit tests
+unittest_sources = ['test/test-runner.cpp', 'test/test-core.cpp', 'test/test-netstring.cpp']
+unittest = env.Program(target = 'test/test-runner', source = [unittest_sources], LIBS=['json', 'jsonrpc', 'cppunit']);
+
+# Run unit tests
+runtest = env.Command('runtest', None, "test/test-runner $SOURCE $TARGET");
 
 # Install script
 env.Install(dir = install_dir + "/lib/", source = libjsonrpc);
@@ -48,23 +54,27 @@ Clean(doxygen, "doc/doxygen.pyc");
 AlwaysBuild(doxygen);
 env.Alias('doxygen', doxygen);
 
-
 # Alias for target
 env.Alias('build', [libjsonrpc]);
-env.Alias('examples', ['test/tcp-server', 'test/udp-server', 'test/tcp-client', 'test/udp-client']);
-env.Alias('all', ['build', 'examples', 'doc']);
+env.Alias('examples', ['build', tcpserver, udpserver, tcpclient, udpclient]);
+env.Alias('all', ['build', 'examples', 'doc', 'test']);
 env.Alias('install', [install_dir]);
+env.Alias('test', ['build', unittest]);
+env.Alias('runtest', ['test', runtest]);
 
 # Help documentation
 Help("""
 Type: 'scons build' to build JsonRpc-Cpp library,
       'scons install' to install the JsonRpc-Cpp library in the system,
       'scons doc' to build documentation (doxygen),
+      'scons test' to build unit tests,
+      'scons runtest' to run unit tests,
       'scons -c' to clean object files,
       'scons -c install' to uninstall library and include files,
-      'scons -c doc' to remove documentation files.
+      'scons -c doc' to remove documentation files,
+      'scons -c all' to cleanup everything.
       \n
-      Default target when launching scons without argument is 'scons build.
+      Default target when launching scons without argument is 'scons build'.
 """);
 
 # Default target when running scons without arguments
