@@ -94,40 +94,3 @@ namespace netstring
 
 } /* namespace netstring */
 
-#if 0 
-
-/* test */
-
-int main(int argc, char** argv)
-{
-  std::string a = netstring::encode("hello world!");
-  std::string b = netstring::decode(a);
-  
-  std::cout << a << std::endl;
-  std::cout << b << std::endl;
-
-  try
-  {
-    
-    /* length field too long */
-    /* a = netstring::decode("13:hello world!,"); */
-    /* length field too small */
-    /* a = netstring::decode("11:hello world!,"); */
-    /* string too long */
-    /* a = netstring::decode("12:hello world!!,"); */
-    /* missing "," */
-    /* a = netstring::decode("12:hello world!"); */
-    /* missing ":" */
-    a = netstring::decode("12hello world!,");
-
-  }
-  catch(std::runtime_error e)
-  {
-    std::cout << "Exception raised: " << e.what() << std::endl;
-  }
-
-  return 0;
-}
-
-#endif
-
